WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314741
Correct build failures in WebAssembly Clang Module Verification
https://bugs.webkit.org/show_bug.cgi?id=314741
Summary
Correct build failures in WebAssembly Clang Module Verification
Brent Fulgham
Reported
2026-05-13 11:00:55 PDT
This change corrects a build failure triggered by clang when verifying modules during the build.
Attachments
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2026-05-13 11:01:43 PDT
In file included from <module-includes>:520: /Users/bfulgham/Projects/WebKit/WebKitBuild/Products/Release-iphonesimulator/JavaScriptCore.framework/PrivateHeaders/ JSWebAssemblyStreamingContext.h:30:10: error: double-quoted include "JSCell.h" in framework header, expected angle-bracketed instead [-Werror,-Wquoted-include-in-framework-header] 30 | #include "JSCell.h" | ^ And a few more.
Radar WebKit Bug Importer
Comment 2
2026-05-13 11:01:56 PDT
<
rdar://problem/176991139
>
Brent Fulgham
Comment 3
2026-05-13 11:05:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64853
EWS
Comment 4
2026-05-13 11:08:42 PDT
Committed
313176@main
(8c3ffc7374b1): <
https://commits.webkit.org/313176@main
> Reviewed commits have been landed. Closing PR #64853 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug