Correct build failures in WebAssembly Clang Module Verification https://bugs.webkit.org/show_bug.cgi?id=314741 <rdar://problem/176991139>

Reviewed by Keith Miller and Yusuke Suzuki

Adjust syntax in WebAssembly headers to avoid violating clang syntax rules.

No impact on build product, but avoids an annoying build failure.

This was introduced in 313171@main.

* Source/JavaScriptCore/wasm/js/JSWebAssemblyStreamingContext.h:
* Source/JavaScriptCore/wasm/js/JSWebAssemblyStreamingContextInlines.h:

Canonical link: https://commits.webkit.org/313176@main